<resources>
    <string name="app_name">Halli Galli</string>

    <!-- Main -->
    <string name="play">Play</string>
    <string name="settings">Settings</string>

    <!-- Settings -->
    <string name="sounds">Sounds</string>
    <string name="vibrations">Vibrations</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">easy</string>
    <string name="hard">hard</string>

    <!-- Game -->
    <string name="exit">Exit Game</string>
    <string name="exitMessage">Are you sure you want to exit the game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="name">Name</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="bot">Bot</string>
    <string name="confirm">Confirm</string>
    <string name="darkmode">Dark Mode</string>
</resources>
