<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/settings_box">

        <LinearLayout style="@style/SettingsEntry">

            <TextView
                android:id="@+id/textviewSounds"
                style="@style/SettingsTextView"
                android:text="@string/sounds" />

            <Switch
                android:id="@+id/switchSounds"
                style="@style/SettingsSwitch" />
        </LinearLayout>

        <LinearLayout style="@style/SettingsEntry">

            <TextView
                android:id="@+id/textviewVibrations"
                style="@style/SettingsTextView"
                android:text="@string/vibrations" />

            <Switch
                android:id="@+id/switchVibrations"
                style="@style/SettingsSwitch" />
        </LinearLayout>

        <LinearLayout
            style="@style/SettingsEntry"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewDifficulty"
                style="@style/SettingsTextView"
                android:text="@string/difficulty" />

            <SeekBar
                android:id="@+id/seekBarDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:max="100"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textviewDifficultyStart"
                    android:text="@string/easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/textviewDifficultyEnd"
                    android:text="@string/hard"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>